--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -63,12 +63,12 @@ paginated_products ||= products
 </div><% end %>
 <% end %>
 <% if (!spree_current_user) %>
-<div class="col-md-12">
-<p>"Accessories and replacement parts are currently only available to existing customers. Please login to the site to complete checkout. If you’re an existing customer and don’t have an account please create one via the account screen <a href="https://watteam.herokuapp.com/account">"https://watteam.herokuapp.com/account"</a></p>
+<div class="col-md-12 acce">
+<p>Accessories and replacement parts are currently only available to existing customers. Please login to the site to complete checkout. If you’re an existing customer and don’t have an account please create one via the account screen <a href="https://watteam.herokuapp.com/account">"https://watteam.herokuapp.com/account"</a></p>
 </div>
 <% else if (spree_current_user && spree_current_user.orders.count == 0) %>
-<div class="col-md-12">
-<p>"Accessories and replacement parts are currently only available to existing customers. Please login to the site to complete checkout. If you’re an existing customer and don’t have an account please create one via the account screen <a href="https://watteam.herokuapp.com/account">"https://watteam.herokuapp.com/account"</a></p>
+<div class="col-md-12 acce">
+<p>Accessories and replacement parts are currently only available to existing customers. Please login to the site to complete checkout. If you’re an existing customer and don’t have an account please create one via the account screen <a href="https://watteam.herokuapp.com/account">"https://watteam.herokuapp.com/account"</a></p>
 </div>
 <% end %>
 <% end %>
