--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -49,7 +49,7 @@
     <div class="slider_container">
 <!--      <h1 class="text-center title-Sellers">Best Sellers</h1> -->
       <div class="slider_contain">
-        <div class="col-sm-4 col-md-4">
+        <div class="col-sm-6 col-md-6">
           <div id="effect-1" class="effects clearfix">
             <div class="img"> <%= link_to image_tag("item-1.png", :alt => "user"), '/products/powerbeat-pro-level-power-meter-spring-2016' %>
               <div class="overlay"> <a href="/products/powerbeat-pro-level-power-meter-spring-2016" class="expand">+</a> 
@@ -59,7 +59,7 @@
             <h2 class="text-center title-2"><a href="/products/powerbeat-pro-level-power-meter-spring-2016" style="color:#0099A8 !important">powerbeat</a></h2>
           </div>
         </div>
-        <div class="col-sm-4 col-md-4 ">
+        <div class="col-sm-6 col-md-6 ">
           <div id="effect-1" class="effects clearfix">
             <div class="img"> <%= link_to image_tag("item-2.png", :alt => "user"), '/products' %>
               <div class="overlay"> <a href="/products" class="expand">+</a> 
@@ -69,7 +69,7 @@
           </div>
           <h2 class="text-center title-2"><a href="/products" style="color:#0099A8 !important">accessories</a></h2>
         </div>
-        <div class="col-sm-4 col-md-4">
+        <!--<div class="col-sm-4 col-md-4">
           <div id="effect-1" class="effects clearfix">
             <div class="img"> <%= link_to image_tag("item-3.png", :alt => "user"), 'http://watteam.com/news/press/' %>
               <div class="overlay"> <a href="http://watteam.com/news/press/" class="expand">+</a> 
@@ -78,7 +78,7 @@
             </div>
           </div>
           <h2 class="text-center title-2"><a href="http://watteam.com/news/press/" style="color:#0099A8 !important">in the news</a></h2>
-        </div>
+        </div> -->
          
         
        <div class="clearfix"></div>
@@ -97,7 +97,7 @@
   <div class="container ">
     <div class="row ">
       <div class="col-xs-12 col-md-12 col-sm-12 ">
-        <h2 class="text-center text-heading">#watteampowerbeat on INSTAGRAM</h2>
+        <h2 class="text-center text-heading">Follow us on Instagram</h2>
         <p class="lead">Follow us to  find out the latest news and from our powerbeat team</p>
         <!--< div class="logo-slider">
          <ul class="slider2 logo-slide" style="width: 1115%; position: relative; transition-duration: 0.5s; transform: translate3d(-2380px, 0px, 0px);">
