--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -151,7 +151,7 @@ POWERBEAT sports the industry's first ecological battery. It comes equipped with
     <td>Waterproof:</td><td>IP64 certified</td>
   </tr>
   <tr>
-    <td>Compatible cranks:</td><td>Hollow aluminum <a href="#" id="crank_list" >(Click here for full list)</a></td>
+    <td>Compatible cranks:</td><td>HOLLOW ALUMINUM & CARBON<a href="#" id="crank_list" >(Click here for full list)</a></td>
   </tr>
   <tr>
     <td>Mobile apps:</td><td>iOS and Android</td>
@@ -163,19 +163,23 @@ POWERBEAT sports the industry's first ecological battery. It comes equipped with
 <div id="tab-4" class="tab-content">
 <p>Below is a list of components that are included in the box:</p>
 <p>
-2 Comp Units<br />
-2 Sensors<br/>
-1 Calibration tool<br />
-1 Gluing tool<br />
-1 Charger with cable<br />
-2 Empty water bags<br />
-2 Adhesive strips<br />
-4 Washers<br />
-4 Alcohol pads<br />
-2 Sand papers<br />
-1 Glue tube<br />
-1 Glue remover<br />
-1 User's Manual<br />
+2  Comp Units<br/> 
+2  Sensors <br/>
+1  Gluing Tool <br/>
+1  Charger with cable<br/> 
+1  User’s Manual <br/>
+1  USB cable <br/>
+2  Adhesive rubber strips <br/>
+4  Washers (spacers) <br/>
+1  Pair of protective rubber gloves <br/>
+1  Bottle of glue <br/>
+1  Bottle of glue remover<br/> 
+1  Primer pad <br/>
+2  Hooks<br/>
+4  Alcohol pads<br/> 
+2  Pieces of sandpaper<br/> 
+2  Water bags <br/>
+3 Safety data sheets - Primer\Remover\Glue<br/>
 <br />
 Box size:   27*22.5*7 cm<br />
 Box weight: 850 grams (29.9 ounces)<br />
