--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -208,10 +208,15 @@ FC R700<br />
 <br />
 <strong>FSA:</strong><br />
 Energy<br />
+SL-K (2012 and newer)<br/>
+K-Force (2012 and newer)<br/>
 <br />
 <strong>Rotor:</strong><br />
 3D<br />
-3D+<br />
+3D+<br /><br/>
+<strong>SRAM</strong><br/>
+Red (2012 and newer)<br/>
+Force (2012 and newer)<br/>
 </p>
 </div>
 </div>
