--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -214,7 +214,7 @@ K-Force (2012 and newer)<br/>
 <strong>Rotor:</strong><br />
 3D<br />
 3D+<br /><br/>
-<strong>SRAM</strong><br/>
+<strong>SRAM:</strong><br/>
 Red (2012 and newer)<br/>
 Force (2012 and newer)<br/>
 </p>
