--- a/app/views/spree/admin/products/_form.html.erb
+++ b/app/views/spree/admin/products/_form.html.erb
@@ -7,14 +7,15 @@
 <%= f.error_message_on :name %>
 <% end %>
 </div>
-<!--
+<% if false %>
 <div data-hook="admin_product_form_ordering">
 <%= f.field_container :ordering do %>
 <%= f.label :ordering, raw(Spree.t(:ordering) + content_tag(:span, ' *', :class => 'required')) %>
 <%= f.text_field :ordering, :class => 'fullwidth title', :required => true %>
 <%= f.error_message_on :ordering %>
 <% end %>
-</div> -->
+</div>
+<% end %>
 
 
 
