--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -164,7 +164,7 @@ if(current_order)
 @var = Spree::Product.find(23).variants
  current_order.line_items.each do |line_item| 
    
- @var.each do |linevariants1|
+        @var.each do |linevariants1|
  
           if (linevariants1.id == line_item.variant_id)
             @qnt += line_item.quantity 
@@ -173,23 +173,27 @@ if(current_order)
           end %>
       <% end %>
      <% end %>
+     
+
      <% if (@product.id == 23 || @product.id == 22 || spree_current_user) %>
      <% if(@hide_cart_btn == false) %>
         <% if (@qnt) && (@qnt >= 2) && (@product.id == 23) %>
+
         <h4>Already added in <a href="/cart">cart</a>.</h4>
         <% else %>
   			  <%= button_tag :class => 'large primary button gray', :id => 'add-to-cart-button', :type => :submit, :disabled=> "disabled" do  %>
   				Buy Now
           <% end %>
           <% end %>
-
-         
          <% end %>
 
 
   			  <% end %>
 			<% else %>
-				<h4>Already added in <a href="/cart">cart</a>.</h4>
+      <%= @qnt%>
+			<%= button_tag :class => 'large primary button gray', :id => 'add-to-cart-button', :type => :submit, :disabled=> "disabled" do  %>
+          Buy Now
+          <% end %>
 			<% end %>
      
         </div>
