--- a/app/views/spree/orders/_line_item.html.erb
+++ b/app/views/spree/orders/_line_item.html.erb
@@ -1,4 +1,5 @@
 <% variant = line_item.variant -%>
+
 <%= order_form.fields_for :line_items, line_item do |item_form| -%>
   <tr class="<%= cycle('', 'alt') %> line-item">
     <td class="cart-item-image" data-hook="cart_item_image">
@@ -7,6 +8,7 @@
       <% else %>
         <%= link_to image_tag(variant.images.first.attachment.url(:small)), variant.product %>
       <% end %>
+      <span class="product_id" style="display:none;"><%= variant.product_id %></span>
     </td>
     <td class="cart-item-description" data-hook="cart_item_description">
       <h4><%= link_to line_item.name, product_path(variant.product) %></h4>
