--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -181,9 +181,13 @@ if(current_order)
 
         <h4>Already added in <a href="/cart">cart</a>.</h4>
         <% else %>
-  			  <%= button_tag :class => 'large primary button gray', :id => 'add-to-cart-button', :type => :submit, :disabled=> "disabled" do  %>
-  				Buy Now
-          <% end %>
+  			  <% #button_tag :class => 'large primary button gray', :id => 'add-to-cart-button', :type => :submit, :disabled=> "disabled" do  %>
+  				<% #Buy Now %>
+          <% #end %>
+        
+<button type="button" class="large primary button gray" data-toggle="modal" data-target="#myModal" id="add-to-cart-button1">BUY NOW</button>    
+
+        
           <% end %>
          <% end %>
 
@@ -191,10 +195,12 @@ if(current_order)
   			  <% end %>
 			<% else %>
       <%= @qnt%>
-			<%= button_tag :class => 'large primary button gray', :id => 'add-to-cart-button', :type => :submit, :disabled=> "disabled" do  %>
-          Buy Now
-          <% end %>
-			<% end %>
+          <% #button_tag :class => 'large primary button gray', :id => 'add-to-cart-button', :type => :submit, :disabled=> "disabled" do  %>
+          <% #Buy Now %>
+          <% #end %>
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY NOW</button>    
+
+ 			<% end %>
      
         </div>
 		
@@ -210,6 +216,64 @@ if(current_order)
  <% if(@hide_cart_btn == true) %>
     <p class="additional">Additional sensors are not available for purchase at this point. If you have a problem and need a replacement, please contact <b><a href="mailto:support@watteam.com">support@watteam.com</a></b></p>
          <% end %>
+           
+ <div class="modal fade notice" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        
+        </div>
+        <div class="modal-body">
+         <p>We've run out of inventory. Please sign up for our newsletter to be the first to hear when we launch our next pre-order! </p>
+<div id="mc_embed_signup">
+<div class="">
+<form action="//watteam.us10.list-manage.com/subscribe/post?u=a111cc0531d37f010c883cb18&amp;id=c36d0bcffe" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+
+    <div id="mc_embed_signup_scroll">
+
+<div class="mc-field-group form-group">
+
+  <label for="email" class="footer-title">NEWSLETTER SIGN-UP </label>
+  <input type="email" value="" name="EMAIL" class="required email form-control mc-email-border" id="email mce-EMAIL" placeholder="Enter email">
+   <input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
+   
+   <p class="sf_required_fields_msg" id="requiredfieldsmsg"></p>
+</div>
+
+  <div id="mce-responses">
+
+    <div class="response" id="mce-error-response" style="display:none"></div>
+
+    <div class="response" id="mce-success-response" style="display:none"></div>
+
+  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_a111cc0531d37f010c883cb18_67cb1e31c9" tabindex="-1" value=""></div>
+
+   
+
+    </div>
+
+</form>
+
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
+    </div>
+
+        </div>
+     
+      </div>
+      
+    </div>
+  </div>
+
+</div>
+
+
 <div style="display:none;" class="main-cart-popup">
   <div id="addtocart-popup">
   <div class="cart-popup-content">
