--- a/app/views/spree/shared/_order_details.html.erb
+++ b/app/views/spree/shared/_order_details.html.erb
@@ -1,3 +1,6 @@
+<script>
+window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
+</script>
 <div class="row steps-data">
 
   <% if order.has_step?("address") %>
