--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -1,3 +1,6 @@
+<script>
+window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
+</script>
 <%
 paginated_products = @searcher.retrieve_products if params.key?(:keywords)
 paginated_products ||= products
