--- a/app/views/spree/orders/edit.html.erb
+++ b/app/views/spree/orders/edit.html.erb
@@ -1,3 +1,6 @@
+<script>
+window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
+</script>
 <% @body_id = 'cart' %>
 
 <div data-hook="cart_container " class="">
