--- a/app/views/spree/shared/_login.html.erb
+++ b/app/views/spree/shared/_login.html.erb
@@ -1,3 +1,6 @@
+<script>
+window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
+</script>
 <%= form_for Spree::User.new, :as => :spree_user, :url => spree.create_new_session_path do |f| %>
 <div id="password-credentials">
 <p>
