--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -305,7 +305,7 @@ if(current_order)
 
 <script>
 jQuery( document ).ready(function($) {
- 
+ jQuery("#add-to-cart-button1").click();
  var data = $('.access').attr('id');
     if(data == 'data'){
       $('#add-to-cart-button').removeAttr('disabled','disabled');
