--- a/app/views/spree/shared/_footer.html.erb
+++ b/app/views/spree/shared/_footer.html.erb
@@ -100,7 +100,7 @@
    <div class="clear"> </div>
 <script>
 $( document ).ready(function() {
- 
+       $('#clear_cart_link .button').click();
   $(".line_item_quantity").each(function() {
    $('.line_item_quantity').prop('readonly','readonly');
     if($(this).val() == 0){
