first update push

--- a/app/views/spree/products/_cart_form.html.erb
+++ b/app/views/spree/products/_cart_form.html.erb
@@ -74,9 +74,7 @@
         <option value="Shimano">Shimano</option>
         <option value="FSA">FSA</option>
         <option value="Rotor">Rotor</option>
-
         <option value="SRAM">SRAM</option>
-
         <option value="Crank_Mfg_Not_Available">Crank Manufacturer Not Listed</option>
       </select> 
 <br clear="both" />
@@ -396,20 +394,16 @@ switch(sel_mfg){
   break;
   case 'FSA':
   $('#crank_model').html('<option value="">Please select</option>' +
- '<option value="Energy" class="FSA">Energy</option>'+
- '<option value="SL-K (2012 and newer)" class="SL-K">SL-K (2012 and newer)</option>'+
- '<option value="K-Force (2012 and newer)" class="K-Force">K-Force (2012 and newer)</option>');
+ '<option value="Energy" class="FSA">Energy</option>'
+ );
   break;
   case 'Rotor':
   $('#crank_model').html('<option value="">Please select</option>' +
  '<option value="3D" class="Rotor">3D</option>'+
  '<option value="3DPlus" class="Rotor">3D+</option>');
   break;
-
   case 'SRAM':
-  $('#crank_model').html('<option value="">Please select</option>' +
- '<option value="Red (2012 and newer)" class="Red">Red (2012 and newer)</option>'+
- '<option value="Force (2012 and newer)" class="Force">Force (2012 and newer)</option>');
+  $('#crank_model').html('<option value="">Please select</option>');
   break;
 }
   $('#crank_model').append('<option value="CRANK_NOT_LISTED">Crank model not listed</option>');
