--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -108,7 +108,7 @@ $(document).ready(function(){
 	to the cranks deliver real (not estimated) left and right leg power metrics.  POWERBEAT is light-weight, durable and consistently accurate enough to be used by professional cyclists – yet affordable enough for unsponsored cyclists. It's also the first to come with an 80-hour rechargeable battery, and works with ANT+ head units, as well as with Bluetooth Smart enabled smartphones. <br />
 At last, a professional-grade power meter that anyone can afford!<br />
 Notes:<br />
-1)  POWERBEAT supports hollow aluminum cranks and carbon cranks. Future versions will support additional cranks models.<br />
+1)  POWERBEAT supports hollow aluminum cranks and in the near future, crabon cranks as well. Future versions will support additional cranks models.<br />
 2)  POWERBEAT works with standard BLE head units, such as Suunto Ambit, or head units that support two sensor measurements, such as Polar V800.
 </p>
 </div>
@@ -151,7 +151,7 @@ POWERBEAT sports the industry's first ecological battery. It comes equipped with
     <td>Waterproof:</td><td>IP64 certified</td>
   </tr>
   <tr>
-    <td>Compatible cranks:</td><td>HOLLOW ALUMINUM & CARBON<a href="#" id="crank_list" >(Click here for full list)</a></td>
+    <td>Compatible cranks:</td><td>HOLLOW ALUMINUM <a href="#" id="crank_list" >(Click here for full list)</a></td>
   </tr>
   <tr>
     <td>Mobile apps:</td><td>iOS and Android</td>
