first update push

--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -1,5 +1,5 @@
 <script>
-window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
+//window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
 </script>
 <%
 paginated_products = @searcher.retrieve_products if params.key?(:keywords)
