--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -1,5 +1,6 @@
 <script>
-window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
+//window.location.href = '/products/powerbeat-pro-level-power-meter-spring-2016';
+
 </script>
 <section class="slider_home1">
 <div id="carousel-example" class="carousel slide" data-ride="carousel">
