--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -91,7 +91,7 @@ $(document).ready(function(){
 
 <% if (@product.id == 23 || @product.id == 22 ) %>
 <div class="shipping_info_2015 clearfix">
-<strong>Shipping will be available in May 2016 (Currently available in the US only)</strong>
+<strong style="display:none;">Shipping will be available in May 2016 (Currently available in the US only)</strong>
 </div>
  
 <ul class="tabs">
