--- a/app/views/spree/products/index.html.erb
+++ b/app/views/spree/products/index.html.erb
@@ -1,5 +1,5 @@
 <script>
-//window.location.href = "/products/powerbeat-pro-level-power-meter-spring-2016";
+window.location.href = "/products/powerbeat-pro-level-power-meter-spring-2016";
 
 //$('body').css('display','none');
 </script>
